# blockchain-data-ingestion

./: .env.example  .gitignore  Cargo.toml  README.md  blockchains.toml
migrations/: 0001_initial.down.sql  0001_initial.sql
src/: lib.rs  main.rs
src/blockchain/: adapters.rs  evm_adapter.rs  mod.rs
src/storage/: db.rs
src/streams/: consumer.rs  mod.rs  producer.rs
src/streams/consumers/: consumer.rs  evm_consumer.rs  mod.rs
src/streams/message_queue/: mod.rs  pulsar.rs
src/streams/producers/: evm_producer.rs  mod.rs  producer.rs
src/streams/schemas/: evm.rs  mod.rs  schema.rs
src/utils/: mod.rs  pulsar_utils.rs
